--- a/views/partials/subscriptions/checkoutScript.ejs
+++ b/views/partials/subscriptions/checkoutScript.ejs
@@ -25,7 +25,7 @@
                         body: JSON.stringify({
                             subscriptions,
                             customerID: billingID,
-                            backURL: 'subscribe'
+                            backPathname: 'subscribe'
                         })
                     })
                         .then((result) => result.json())
@@ -54,7 +54,7 @@
                         body: JSON.stringify({
                             subscriptions,
                             email: email,
-                            backURL: 'subscribe',
+                            backPathname: 'subscribe',
                             renew: false
                         })
                     })
